2006-12-05 [paul]	2.6.1cvs4

	* src/wizard.c
		encode headers
		Thanks to Colin

2006-12-05 [paul]	2.6.1cvs3

	* tools/README
	* tools/textviewer.pl
		script updated and description added

2006-12-04 [colin]	2.6.1cvs2

	* src/compose.c
		Run pre-send hook only when checking
		everything

2006-12-04 [paul]	2.6.1cvs1

	* NEWS
	* README
	* RELEASE_NOTES
	* configure.ac
	* tools/README
		bump up version number following stable release

2006-12-04 [paul]	2.6.0cvs83

	* README
		updates and corrections

2006-12-04 [colin]	2.6.0cvs82

	* src/common/utils.c
		Probably fix bug 1066, 'Incorrect mailbox 
		size displayed'

2006-12-04 [colin]	2.6.0cvs81

	* src/common/utils.c
		Trim tabs from mailcap file too.

2006-12-02 [paul]	2.6.0cvs80

	* src/exphtmldlg.c
		fix broken GUI under certain languages
	* src/expldifdlg.c
		put the Cancel button to the right

2006-12-01 [paul]	2.6.0cvs79

	* tools/Makefile.am
		remove reference to removed file

2006-12-01 [wwp]	2.6.0cvs78

	* src/addressbook.c
	* src/editaddress.c
		remove forgotten debug statements.

2006-12-01 [wwp]	2.6.0cvs77

	* manual/advanced.xml
	* manual/fr/advanced.xml
	* src/addressbook.c
	* src/addressbook.h
	* src/addressitem.h
	* src/editaddress.c
	* src/editaddress.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		add a hidden option to allow embedding the editaddress (edit contact details)
		dialog into the addressbook's window. This doesn't change the default
		behaviour.

2006-12-01 [wwp]	2.6.0cvs76

	* src/message_search.c
	* src/summary_search.c
		fix more focus issues (don't set focus to combobox's entry widget when
		entry's value changed, if entry widget has focus already).

2006-12-01 [wwp]	2.6.0cvs75

	* src/gtk/quicksearch.c
		revert last changes to the quicksearch gtk_combo_box, this needs more
		tuning and testing.

2006-12-01 [paul]	2.6.0cvs74

	* tools/kdeservicemenu/README
	* tools/kdeservicemenu/claws-mail-kdeservicemenu.pl