@@ -2112,3 +2112,4 @@
 ( cvs diff -u -r 1.382.2.338 -r 1.382.2.339 src/compose.c;  ) > 2.6.1cvs2.patchset
 ( cvs diff -u -r 1.30.2.14 -r 1.30.2.15 tools/README;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 tools/textviewer.pl;  ) > 2.6.1cvs3.patchset
 ( cvs diff -u -r 1.1.2.39 -r 1.1.2.40 src/wizard.c;  ) > 2.6.1cvs4.patchset
+( cvs diff -u -r 1.3.12.20 -r 1.3.12.21 src/message_search.c;  cvs diff -u -r 1.15.2.38 -r 1.15.2.39 src/summary_search.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/gtk/combobox.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/gtk/combobox.h;  cvs diff -u -r 1.5.2.45 -r 1.5.2.46 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.27 -r 1.4.2.28 src/gtk/gtkutils.h;  ) > 2.6.1cvs5.patchset
