@@ -41,5 +41,7 @@ gint combobox_get_active_data	(GtkComboBox 		*combobox);
 void combobox_unset_popdown_strings(GtkComboBox		*combobox);
 void combobox_set_popdown_strings(GtkComboBox		*combobox,
 				 GList       *list);
+gboolean combobox_set_value_from_arrow_key(GtkComboBox *combobox,
+				 guint keyval);
 
 #endif /* __COMBOBOX_H__ */
