@@ -1,3 +1,14 @@
+2006-12-05 [wwp]	2.6.1cvs5
+
+	* src/message_search.c
+	* src/summary_search.c
+	* src/gtk/combobox.c
+	* src/gtk/combobox.h
+	* src/gtk/gtkutils.c
+	* src/gtk/gtkutils.h
+		make up and down arrow keys in modern gtk_combo_box_entry widgets
+		behave like w/ old comboboxes (summary and message search only).
+
 2006-12-05 [paul]	2.6.1cvs4
 
 	* src/wizard.c
